2009-04-30 yusei
* Add generic fields to the default field library.

2009-04-18 Kazuhiko
* Version 5.4.1

2009-01-05 nicolas
add TypeBasedMethod for all Deliveries which remove source_reference and destination_reference after cloning

2008-11-28 ivan
* Extend Business Template user interface to handle skin with greater control

2008-11-13 ivan
* Extend preferences to save max user inactivity duration before user is logged out
* Move portal_sessions from erp5_commerce

2008/11/13 yusei
* Start to develop version 5.4.

2008-10-30 ivan
* make ParallelListField always show default empty ListField at bottom not depending on form's validation status

2008-10-24 yusei
* Cleaned up Base_getTranslatedWorkflowStateItemList and separate generic function to Base_getWorkflowStateItemList.

2008-10-24 yusei
* Fixed Folder_generateWorkflowReport. This did not work if there is interaction workflow.

2008-10-22 Romain
* portal_transforms subobject should exported with the path parameter of the business template
* Add png_to_text transformation

2008-10-20 Thibaut
* Allow portal_transforms to extract content.xml file from odt file (zip file).

2008-10-16 Nicolas
* Allow portal_transforms to convert html content to odt, pdf, doc by using oood

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-24 yusei
* Update xml format.

2008-09-16 Kazuhiko
* move Divergence Tester, Delivery Builder, Delivery Tool, Order Builder, Order Tool, delivery_causality_interaction_workflow, delivery_causality_workflow, delivery_movement_causality_interaction_workflow, delivery_movement_simulation_interaction_workflow, delivery_simulation_interaction_workflow, order_movement_simulation_interaction_workflow, order_simulation_interaction_workflow and simulation_movement_causality_interaction_workflow from erp5_core to erp5_base.

2008-09-09 yusei
* Fixed wrong messages.

2008-09-07 yusei
* Replace "+" with " " in translation messages.

2008-09-04 yusei
* Update English messages.

2008-09-03 yusei